# TradingBot

./: .example.env  .gitignore  README.md  pyproject.toml  setup.cfg
app/: __main__.py  config.py  enums.py  interfaces.py  market_data.py  schemas.py
app/backtesting/: backtest.py  backtest_engine.py
app/binance_exchange/: exchange.py  market_data.py
app/bot/: trading_bot.py  trading_bot_builder.py
app/config/: config.py  config_builder.py
app/mock_data/: parsed_klines.json  raw_klines.json
app/position_manager/: position_manager.py  trade_executor.py
app/settings/: example_settings.py
app/signals/: signal_engine.py  signal_processor.py
app/strategies/: base_strategy.py  example_macd_strategy.py  example_rsi_strategy.py  macd_strategy.py  rsi_strategy.py
app/utils/: utils.py
tests/: conftest.py  mocked_data.py  sample_data.py
tests/position_manager/: test_position_manager.py
tests/signals/: test_signal_engine.py  test_signal_processor.py
tests/strategies/: test_macd.py
tests/utils/: test_utils.py
