[tool.poetry]
name = "tradingbot"
version = "0.1.0"
description = ""
authors = ["floris <floris@droppert.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pydantic = "^1.10.7"
ta = "^0.10.2"
types-requests = "^2.28.11.17"
binance-connector = "^2.0.0"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
mypy = "^1.2.0"
black = "^23.3.0"
pyupgrade = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
